# CVSystem

./: .gitattributes  .gitignore  CMakeLists.txt  CVSystem.sln  README.md  build-android.sh  build-arm.bat  build-arm.sh  build-vc14.bat  build.bat  build.py  build.sh  conanfile.py  creat-dev.bat  creat-dev.sh  create-dev.bat  create-dev.sh  linux_arm
CVSTest/: AlgoTest.cpp  BaseThreadTest.cpp  CMakeLists.txt  CVAlgoTest.cpp  CVSTest.vcxproj  CameraThreadTest.cpp  CommonTest.cpp  DevicesHelperTest.cpp  DrawTest.cpp  EventbusTest.cpp  FileHelperTest.cpp  ImageSaveTest.cpp  JsonTest.cpp  LogTest.cpp  MultiCameraTest.cpp  SceneTest.cpp  ThreadPoolTest.cpp  WorkThreadTest.cpp  test0.json  test1.json
CVSystem/: ALGO.hpp  CMakeLists.txt  CVSystem.cpp  CVSystem.h  CVSystem.vcxproj  CVSystem.vcxproj.filters  Common.h  Json.h  stdafx.h
CVSystem/Algorithm/: LightPoint.hpp  Project3DTo2D.hpp
CVSystem/Common/: ALGO.hpp  BaseThread.cpp  BaseThread.h  BaseThread.hpp  Common.cpp  Common.h  CoolTime.hpp  Draw.cpp  Draw.h  Event.cpp  Event.h  FPSCalc.hpp  FileHelper.cpp  FileHelper.h  StringHelper.cpp  StringHelper.h  ThreadPool.cpp  ThreadPool.h  WorkThread.cpp  WorkThread.h
CVSystem/DTO/: DTOType.h  JsonHelper.cpp  JsonHelper.h  Serialize.h
CVSystem/Data/: Debug.h  Scene.cpp  Scene.h  Scene.hpp
CVSystem/Proc/: CamImageProc.hpp  Camera.cpp  Camera.h  CameraGrab.cpp  CameraGrab.h  CameraImage.h  CameraManger.cpp  CameraManger.h  CameraThread.cpp  CameraThread.h  DevicesHelper.cpp  DevicesHelper.h  Draw.cpp  Draw.h  Event.cpp  Event.h  FrameProc.h  ImageSave.cpp  ImageSave.h  MultiCamera.cpp  MultiCamera.h  MultiCameraMT.cpp  MultiCameraMT.h  SimpleModule.hpp
CVSystem/dlog/: dlog.h
CVSystem/eventbus/: AsyncEventBus.h  EventBus.h
Lib/_64/MD/: dlog.lib
src/: CMakeLists.txt
src/CVSTest/: BaseThreadTest.cpp  CMakeLists.txt  CVAlgoTest.cpp  CVSTest.vcxproj  CameraTest.cpp  CommonTest.cpp  DrawTest.cpp  ImageSaveTest.cpp  JsonTest.cpp  MultiCameraTest.cpp  ThreadPoolTest.cpp  WorkThreadTest.cpp
src/CVSystem/: ALGO.hpp  CMakeLists.txt  CVSystem.cpp  CVSystem.h  CVSystem.vcxproj  Common.h  cvsdef.h
src/CVSystem/Algorithm/: LightPoint.hpp
src/CVSystem/Common/: CoolTime.hpp  Event.cpp  Event.h  FPSCalc.hpp  FileHelper.cpp  FileHelper.h  StringHelper.cpp  StringHelper.h  ThreadPool.h  base64.cpp  base64.h
src/CVSystem/DShow/: UVCCamera.cpp  UVCCamera.h  UVCCameraLibrary.cpp  UVCCameraLibrary.h
src/CVSystem/DTO/: Serialize.h  sht.h
src/CVSystem/Data/: DBCommon.cpp  DBCommon.h  DBHelper.cpp  DBHelper.h
src/CVSystem/Model/: Camera.cpp  Camera.h  CameraDevice.cpp  CameraDevice.h  CameraImage.cpp  CameraImage.h  CameraImageGroup.cpp  CameraImageGroup.h  CameraImageQueue.cpp  CameraImageQueue.h  CameraPair.cpp  CameraPair.h  CameraParam.h  ICameraImageFactory.h  IStereo.h  MonoCameraImageFactory.cpp  MonoCameraImageFactory.h  SpecialMonoCameraImageFactory.cpp  SpecialMonoCameraImageFactory.h  StereoCamera.cpp  StereoCamera.h  StereoCameraImageFactory.cpp  StereoCameraImageFactory.h  StereoCameraParam.h
src/CVSystem/Moudel/: Camera.cpp  Camera.h  CameraPair.h  StereoCamera.cpp  StereoCamera.h
src/CVSystem/Proc/: CamImageProc.hpp  Camera.cpp  Camera.h  CameraGrab.cpp  CameraGrab.h  CameraImage.h  CameraManger.cpp  CameraManger.h  CameraThread.cpp  DevicesHelper.h  Draw.cpp  Draw.h  ImageSave.cpp  ImageSave.h  MultiCamera.cpp  MultiCamera.h  MultiCameraMT.h  MultiCameraTP.cpp  MultiCameraTP.h  SimpleModule.hpp
src/CVSystem/System/: CameraGrab.cpp  CameraGrab.h  CameraGrabMT.cpp  CameraGrabMT.h  CameraImage.h  CameraImageQueue.cpp  CameraImageQueue.h  CameraManger.cpp  CameraManger.h  DevicesHelper.cpp  DevicesHelper.h  FrameProc.h  IGrabTask.h  MultiCamera.cpp  MultiCamera.h  TaskCloseSystem.hpp  TaskGrabManyCamera.hpp  TaskGrabOneCamera.hpp  TaskOpenCamera.hpp  UVCCameraLibrary.cpp  UVCCameraLibrary.h
src/CVSystem/eventbus/: AsyncEventBus.cpp
src/CVSystem/web/: HttpServer.h
src/CVSystem/web/dto/: CameraDto.hpp  MCStatusDto.hpp
src/CVSystem/web/extension/: ParserQueryParameters.hpp
src/CVSystem/web/handler/: CameraRequestHandler.cpp  CameraRequestHandler.h  FileHandle.cpp  FileHandle.h  FileHandler.cpp  FileHandler.h  MultiCameraRequestHandler.cpp  MultiCameraRequestHandler.h
src/CamCapture/: CMakeLists.txt  main.cpp
src/DShow/: CMakeLists.txt
src/DShow/baseclasses/: amfilter.cpp  cprop.cpp  mtype.cpp  refclock.cpp  winctrl.cpp  winutil.cpp
test_package/: AlgoTest.cpp  CMakeLists.txt  CVAlgoTest.cpp  CameraDeviceTest.cpp  CameraMangerTest.cpp  CameraTest.cpp  CommonTest.cpp  DBTest.cpp  DevicesHelperTest.cpp  DrawTest.cpp  ImageSaveTest.cpp  MultiCameraTest.cpp  SVMTest.cpp  StereoCameraTest.cpp  conanfile.py  pch.h
test_package/Capture/: CMakeLists.txt  main.cpp
test_package/Server/: CMakeLists.txt  main.cpp
tools/: ListFile.py
